--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPrimary300">#CF8600</color>
     <color name="transparent_black">#80000000</color>
     <color name="transparent_white">#80FFFFFF</color>
+    <color name="gray">#FF9E9E9E</color>
 </resources>
