--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -1,10 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".views.activities.OrderDetailActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable
+            name="OrderDetailViewModel"
+            type="com.example.myfoodorder.viewmodels.OrderDetailViewModel" />
+    </data>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="@color/transparent_white"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="0.1dp"
+            android:onClick="@{() -> OrderDetailViewModel.onClickButtonBack()}"
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_back_arrow"
+                android:scaleX="0.4"
+                android:scaleY="0.4"
+                >
+            </ImageView>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/restaurant_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/banana_lickety_split"
+                app:restaurant_banner_image="@{OrderDetailViewModel.order.getRestaurantWithFoods().restaurant.imageUrl}"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
+                <TextView
+                    android:id="@+id/tv_restaurant_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/svn_gilroy_semi_bold"
+                    android:gravity="center"
+                    android:text="@{OrderDetailViewModel.order.getRestaurantWithFoods().restaurant.name}"
+                    android:textSize="25sp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RatingBar
+                        android:id="@+id/ratingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="45dp"
+                        android:layout_marginStart="-60dp"
+                        android:scaleX="0.5"
+                        android:scaleY="0.5"
+                        android:rating="@{OrderDetailViewModel.order.getRestaurantWithFoods().restaurant.rating}"
+                        android:progressTint="#FFA500"
+                        android:isIndicator="true"/>
+
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/tv_far_away_restaurant"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center_vertical"
+                            android:layout_marginEnd="10dp"
+                            android:drawableStart="@drawable/ic_gps"
+                            android:drawablePadding="10dp"
+                            android:fontFamily="@font/svn_gilroy_regular"
+                            android:gravity="center"
+                            android:text="112km away" />
+                    </FrameLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Total:"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:textSize="20sp"
+                        android:layout_weight="5"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@{String.valueOf(OrderDetailViewModel.order.amount)}"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:textSize="20sp"
+                        android:layout_weight="1"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcv_food_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_food_list"
+                app:list_food_data_order_detail="@{OrderDetailViewModel.listFoods}"
+                >
+            </androidx.recyclerview.widget.RecyclerView>
+        </LinearLayout>
+    </RelativeLayout>
+
+</layout>
