--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.fragments.ProfileFragment">
 
     <data>
@@ -9,36 +10,254 @@
             type="com.example.myfoodorder.viewmodels.ProfileViewModel" />
     </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/banana_lickety_split">
-        </de.hdodenhof.circleimageview.CircleImageView>
+        android:gravity="center"
+        android:paddingTop="50dp"
+        android:paddingBottom="70dp">
 
-        <TextView
-            android:id="@+id/tv_user_name"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{ProfileViewModel.userName}"
-            android:textSize="20sp"
-            android:fontFamily="@font/svn_gilroy_semi_bold"
-            android:gravity="center"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginBottom="15dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:layout_marginBottom="20dp">
 
-        <TextView
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/layout_image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:src="@drawable/banana_lickety_split"
+                    app:user_image="@{ProfileViewModel.avtUrl}">
+                </de.hdodenhof.circleimageview.CircleImageView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@id/layout_image"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_name_item_food"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{ProfileViewModel.userName}"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:textSize="25sp"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:gravity="center"
+                        android:onClick="@{(view) -> ProfileViewModel.onEditProfile(view)}"
+                        android:text="edit profile"
+                        android:textAllCaps="false"
+                        android:background="@color/transparent_white"
+                        android:textSize="15sp">
+
+                    </androidx.appcompat.widget.AppCompatButton>
+                </LinearLayout>
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout_payment"
+            android:layout_below="@id/layout_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{ProfileViewModel.userID}"
-            android:textSize="20sp"
-            android:fontFamily="@font/svn_gilroy_semi_bold"
-            android:gravity="center"
-            android:layout_marginTop="10dp"/>
-    </LinearLayout>
+            android:layout_marginBottom="5dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:layout_margin="5dp"
+                >
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/layout_ic_1"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="0.1dp"
+                    app:cardBackgroundColor="@color/transparent_white"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_atm_card"
+                        android:scaleType="centerCrop"
+                        android:scaleX="0.7"
+                        android:scaleY="0.7"
+                        />
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@id/layout_ic_1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Payment method"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:textSize="15sp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="2 card added"
+                        android:fontFamily="@font/svn_gilroy_regular"
+                        android:textSize="12sp"/>
+
+                </LinearLayout>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_payment"
+            android:layout_marginBottom="5dp"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:layout_margin="5dp"
+                >
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/layout_ic_2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="0.1dp"
+                    app:cardBackgroundColor="@color/transparent_white"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_map"
+                        android:scaleType="centerCrop"
+                        android:scaleX="0.6"
+                        android:scaleY="0.6"
+                        />
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@id/layout_ic_2"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Defaut address"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:textSize="15sp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Your default address here"
+                        android:fontFamily="@font/svn_gilroy_regular"
+                        android:textSize="12sp"/>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_address">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:layout_margin="5dp"
+                >
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/layout_ic_3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="0.1dp"
+                    app:cardBackgroundColor="@color/transparent_white"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_atm_card"
+                        android:scaleType="centerCrop"
+                        android:scaleX="0.6"
+                        android:scaleY="0.6"
+                        />
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@id/layout_ic_3"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Payment method"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:textSize="15sp"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Your default payment method here"
+                        android:fontFamily="@font/svn_gilroy_regular"
+                        android:textSize="12sp"/>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/ic_log_out"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="30dp">
+
+        </androidx.appcompat.widget.AppCompatButton>
+
+    </RelativeLayout>
 
 
 </layout>
