--- a/app/src/main/res/layout/layout_bottom_change_password.xml
+++ b/app/src/main/res/layout/layout_bottom_change_password.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-            name="DialogRegisterViewModel"
-            type="com.example.myfoodorder.viewmodels.DialogRegisterViewModel" />
+            name="DialogChangePasswordViewModel"
+            type="com.example.myfoodorder.viewmodels.DialogChangePasswordViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -23,22 +23,12 @@
             android:paddingBottom="20dp">
 
             <TextView
-                android:id="@+id/tv_welcome_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="25dp"
-                android:fontFamily="@font/svn_gilroy_semi_bold"
-                android:text="Hello..."
-                android:textSize="20sp" />
-
-            <TextView
                 android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/svn_gilroy_semi_bold"
-                android:text="Register"
+                android:text="Change password"
                 android:textSize="34sp" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -53,8 +43,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="email"
-                    android:text="@={DialogRegisterViewModel.email}"
+                    android:hint="old password"
+                    android:text="@={DialogChangePasswordViewModel.oldPassword}"
                     android:fontFamily="@font/svn_gilroy_regular"/>
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,9 +61,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/svn_gilroy_regular"
-                    android:hint="password"
+                    android:hint="new password"
                     android:inputType="textPassword"
-                    android:text="@={DialogRegisterViewModel.password}" />
+                    android:text="@={DialogChangePasswordViewModel.newPassword}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -89,9 +79,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/svn_gilroy_regular"
-                    android:hint="confirm password"
+                    android:hint="confirm new password"
                     android:inputType="textPassword"
-                    android:text="@={DialogRegisterViewModel.confirmPassword}" />
+                    android:text="@={DialogChangePasswordViewModel.confirmPassword}" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -105,39 +95,11 @@
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/yellow_background"
                 android:fontFamily="@font/svn_gilroy_semi_bold"
-                android:text="Register"
+                android:text="Change"
                 android:textAllCaps="false"
                 android:textSize="16sp"
-                android:onClick="@{() -> DialogRegisterViewModel.onRegisterClick()}"
+                android:onClick="@{() -> DialogChangePasswordViewModel.onClickButtonConfirm()}"
                 />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Already have account?"
-                    android:fontFamily="@font/svn_gilroy_regular"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:fontFamily="@font/svn_gilroy_semi_bold"
-                    android:text="Login"
-                    android:textColor="#F44336"
-                    android:onClick="@{() -> DialogRegisterViewModel.onNavigateToLogin()}">
-                </TextView>
-            </LinearLayout>
-
 
         </LinearLayout>
 
