--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,10 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".views.activities.SplashActivity">
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="SplashViewModel"
+            type="com.example.myfoodorder.viewmodels.SplashViewModel" />
+    </data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="367dp"
+            android:layout_height="333dp"
+            android:layout_gravity="center"
+            android:src="@drawable/getstarted"
+            android:layout_marginTop="70dp"/>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/svn_gilroy_semi_bold"
+            android:gravity="center"
+            android:text="Food to blow your mind!"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Order food from your favorite restaurants"
+            android:fontFamily="@font/svn_gilroy_regular"/>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Get it delivered to your doorstep"
+            android:fontFamily="@font/svn_gilroy_regular"/>
+
+    </LinearLayout>
+
+
+</layout>
