--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -253,7 +253,8 @@
             android:background="@drawable/ic_log_out"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginRight="30dp">
+            android:layout_marginRight="30dp"
+            android:onClick="@{()->ProfileViewModel.signOut()}">
 
         </androidx.appcompat.widget.AppCompatButton>
 
